--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,17 +29,14 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.6
-  dio: ^5.4.0
   dartz: ^0.10.1
-
+  dio: ^5.4.0
   flutter:
     sdk: flutter
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
-  injectable: ^2.3.2
   get_it: ^7.6.7
-  dev: ^1.0.0
-  injectable_generator: ^2.4.1
+  injectable: ^2.3.2
   flutter_bloc: ^8.1.3
   logger: ^2.0.2+1
   cached_network_image: ^3.3.1
@@ -49,13 +46,17 @@ dependencies:
   shimmer: ^3.0.0
   lottie: ^3.0.0
   flutter_svg: ^2.0.9
+  mocktail: ^1.0.3
+
 
 dev_dependencies:
+  bloc_test: ^9.1.5
   build_runner: ^2.4.8
   flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
   freezed: ^2.4.6
+  injectable_generator: ^2.4.1
   json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
